--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,8 +2,15 @@
   background-color: #ffdf39;
   padding: 30px;
 }
+.navigation a{
+  text-decoration: none;
+  border-radius: 10px;
+  padding: 10px 20px;
+  background-color: #009439;
+  color: white;
+}
+
 .app-content{
-  /*height: 100%;*/
   padding: 20px 0;
   background-color: #009439;
 }
