--- a/src/app/components/delete/delete.component.html
+++ b/src/app/components/delete/delete.component.html
@@ -1,9 +1,16 @@
-<h3>{{data.expense.title}}</h3>
-<p>{{data.expense.reason}}</p>
-<p>{{data.expense.date}}</p>
-<p>{{data.expense.amount}}</p>
-
-<div>
-  <button (click)="delete()">Eliminar</button>
-  <button (click)="cancel()">Cancelar</button>
-</div>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>
+      {{data.expense.title}}
+    </mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>{{data.expense.reason}}</p>
+    <p>{{data.expense.date}}</p>
+    <p>{{data.expense.amount}}</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button (click)="delete()">Eliminar</button>
+    <button mat-button (click)="cancel()">Cancelar</button>
+  </mat-card-actions>
+</mat-card>
