--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,2 +1,1 @@
-<h2 style="text-align: center">Bienvenido/a, da click en Iniciar</h2>
-
+<h2 style="text-align: center">BIENVENIDO/A, da click en INICIAR</h2>
